# ml-booth-netflix-prediction

./: .python-version  final_project_jupyter_v2.ipynb  final_project_jupyter_v2.py  final_project_jupyter_v3.ipynb  pyproject.toml  run.py
.virtual_documents/: final_project_jupyter_v2.ipynb
_ipynb_checkpoints/: final_project_jupyter_v2-checkpoint.ipynb  final_project_jupyter_v2-checkpoint.py
scratchpads/: final_project_jupyter_v2.ipynb  final_project_jupyter_v2.py  scratch.ipynb
src/: parse_data.py
