[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "ML Booth Final Project"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9 <=3.10"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
