[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "ML Booth Final Project"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9 <=3.10"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
parquet = "^1.3.1"
pyarrow = "^7.0.0"
mpire = "^2.3.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"
black = "^22.1.0"
pylama = "^8.3.7"
tqdm = "^4.63.0"
nbconvert = "^6.4.2"
ipython_genutils = "^0.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
